test/domains/vass/domain-from-unbounded-ranges-2.good
domain-from-unbounded-ranges-2.chpl:4: error: one of domain's dimensions is not a bounded range
