test/domains/vass/domain-from-unbounded-ranges-2.chpl

var
 r1 = {1..2},
 r2 = {1..};
var d = {r1, r2};
